--- a/localization/zhs/AigisMod-Character-Strings.json
+++ b/localization/zhs/AigisMod-Character-Strings.json
@@ -34,13 +34,13 @@
   },
   "aigisMod:TheDarkKnightCharacter": {
     "NAMES": [
-      "The Dark Knight",
-      "the Dark Knight"
+      "暗黑骑士",
+      "暗黑骑士"
     ],
     "TEXT": [
-      "A warrior who became a living armor is guided by the voice of the stars. NL Through the Spire, he might make an important discovery.",
-      "You are about to use the special technique against the heart.",
-      "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The tallest among them bares fanged teeth and extends a long, pale hand towards you. NL ~\"Join~ ~us~ ~knight,~ ~and~ ~feel~ ~the~ ~warmth~ ~of~ ~the~ ~Spire.\"~"
+      "被星辰的声音所引导的成为活铠甲的战士。 NL 通过高塔，他有了重大的发现。",
+      "你将用特殊的技术攻击心脏。",
+      "在一条昏暗的街上，你遇见几个戴着兜帽的人在进行某种黑暗的仪式。当你靠近时，他们全都同时转身面对你，让你觉得十分诡异。 其中个子最高的一个微微一笑，露出了长长的尖牙，向你伸出了一只苍白而瘦长的手： NL ~\"加入~ ~我们~ ~骑士。~ ~一起~ ~感受~ ~高塔~ ~的~ ~温暖~ ~吧。\"~"
     ]
   }
 }
