--- a/localization/zhs/AigisMod-UI-Strings.json
+++ b/localization/zhs/AigisMod-UI-Strings.json
@@ -102,8 +102,8 @@
 
   "PrincessMaidAction": {
     "TEXT": [
-      "选择一张牌你的加入到手牌。",
-      "选择牌加入到你的手牌。",
+      "选择一张牌加入到你的手牌中。",
+      "选择牌加入到你的手牌中。",
       "我的牌组里没有公主牌..."
     ]
   },
@@ -118,12 +118,6 @@
     "TEXT": [
       "弃牌。",
       "我的手牌中没有东国牌..."
-    ]
-  },
-
-  "KagerouAction": {
-    "TEXT": [
-      "弃牌。"
     ]
   },
 
@@ -276,45 +270,44 @@
     ]
   },
 
-
   "SumireAction": {
     "TEXT": [
-      "Choose a card to add to your hand.",
-      "I don't have a Meteor or Eastern card in Draw Pile..."
+      "选择一张牌加入到你的手牌中。",
+      "我的抽牌堆中没有流星牌或东国牌..."
     ]
   },
 
   "NielAction": {
     "TEXT": [
-      "Select a cost 1 or lower card to add to hand.",
-      "I don't have any cost 1 or lower Card in Discard Pile..."
+      "选择一张耗能为1或更低的牌加入到你的手牌中。",
+      "我的弃牌堆中没有耗能为1或更低的牌..."
     ]
   },
 
   "ErunAction": {
     "TEXT": [
-      "Choose a card to add to your hand.",
-      "I don't have a Release card in Draw Pile..."
+      "选择一张牌加入到你的手牌中。",
+      "我的抽牌堆中没有解放牌..."
     ]
   },
 
   "NephtyAction": {
     "TEXT": [
-      "to reduce it's cost for the turn."
+      "减少其本回合的耗能。"
     ]
   },
 
   "VivianAction": {
     "TEXT": [
-      "to reduce it's cost for the combat."
+      "减少其本场战斗的耗能"
     ]
   },
 
   "AngelMaidAction": {
     "TEXT": [
-      "Choose a card to add to your hand.",
-      "Choose cards to add to your hand.",
-      "I don't have a Release card in my draw pile..."
+      "选择一张牌加入到你的手牌中。",
+      "选择牌加入到你的手牌中",
+      "我的抽牌堆中没有解放牌..."
     ]
   }
 }
