fix mistakes in Japanese translation 08/18/22
Card
-teeny: Corrected a misleading statement.
Ord
Correct punctuation
Relic
-BlastingEnhancement: Corrected color errors.
Event
-AigisShrine: Corrected color errors.

--- a/localization/jpn/AigisMod-Orb-Strings.json
+++ b/localization/jpn/AigisMod-Orb-Strings.json
@@ -2,7 +2,8 @@
   "aigisMod:MeteorOrb": {
     "NAME": "流星オーブ",
     "DESCRIPTION": [
-      "#y自動効果: #y流星 カードをプレイした時、このオーブのダメージはコスト分上昇し、 ランダムな敵に #b",
+      "#y自動効果: #y流星 カードをプレイした時、このオーブのダメージはコスト分上昇する。",
+      " ターン終了時、 ランダムな敵に #b",
       " ダメージを与える。",
       " NL #y解放: ランダムな敵に #b",
       "ダメージを与える。"
