--- a/localization/jpn/AigisMod-Relic-Strings.json
+++ b/localization/jpn/AigisMod-Relic-Strings.json
@@ -366,7 +366,7 @@
     "FLAVOR": "「デシウスは勝つためには手段を選ばない、すっごく卑劣な男なんです！」-ミーティア",
     "DESCRIPTIONS": [
       "最初の #b4 ターンはターン終了時、 #b5 #yブロック を得る。",
-      "1マップに1回、 HP が #b0 になった時 #b25 HP を得る。"
+      "1マップに1回、戦闘中に HP が #b0 になった時 #b25 HP を得る。"
     ]
   },
   "aigisMod:MaouDecius": {
@@ -374,7 +374,7 @@
     "FLAVOR": "「――嗚呼、星の声が聞こえる。何と美しい、調べなのだろうか……。」-デシウス",
     "DESCRIPTIONS": [
       "#pアーマードデシウス と置き換える。 デッキに大爪形態を #b1 枚 追加する。",
-      "1マップに1回、 HP が #b0 になった時 #b35 HP を得る。 "
+      "1マップに1回、戦闘中に HP が #b0 になった時 #b35 HP を得る。 "
     ]
   },
   "aigisMod:MeteorSword": {
@@ -412,7 +412,7 @@
     "NAME": "爆砕強化の秘術",
     "FLAVOR": "「魔力の精髄を極めること それが私の使命です。」-ガラニア",
     "DESCRIPTIONS": [
-      "戦闘開始時、敵が #2 体以上の時、 #y流星 #b1 を #y生成 する。",
+      "戦闘開始時、敵が #b2 体以上の時、 #y流星 #b1 を #y生成 する。",
       " 戦闘中敵が追加された時、 #y流星 #b1 を #y生成 する。"
     ]
   },
