fix mistakes in Japanese translation 08/18/22
Event
-AigisShrine: Corrected color errors.

--- a/localization/jpn/AigisMod-Event-Strings.json
+++ b/localization/jpn/AigisMod-Event-Strings.json
@@ -24,7 +24,7 @@
       "あなたは神殿を出て冒険を続けた。"
     ],
     "OPTIONS": [
-      "[寄付] #b100 #gゴールドを捧げ、 レリックを 手に入れる。",
+      "[寄付] #b100 #gゴールドを捧げ、 #gレリックを手に入れる。",
       "[祈る] #gカードを #b1 #g枚アップグレードする。",
       "[召喚] #b20 #g枚のカードの中から、デッキに #b1 #g枚加える。",
       "[立ち去る]",
@@ -41,7 +41,7 @@
       "帝国は王国軍との合流地点に到着した。 NL 遠征の再開まで時間はあり、軍の強化に使えそうだ。",
       "あなたは部隊の再編成を行った。",
       "あなたは自軍で訓練した。",
-      "あなたは戦いの後、新たな力に目覚めた"
+      "あなたは戦いの後、新たな力に目覚めた。"
     ],
     "OPTIONS": [
       "[再編] #gカードを #b1 #g枚デッキに加える。",
@@ -74,7 +74,7 @@
       "フロアを移動していると突然体の感覚がなくなり、声が聞こえ始めた…。",
       "あなたはインスピレーションを受け、なぜか強くなったように感じた。",
       "自分の中に馴染みのある力を感じる。",
-      "もっと耳を傾けてほしい"
+      "もっと耳を傾けてほしい。"
     ],
     "OPTIONS": [
       "[星?] #g最大HP+8",
